fix overflow issue

--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -11,41 +11,41 @@ body {
   width: 90%;
   max-width: 800px;
   height: 90vh;
-  .rooms {
-    flex-basis: 30%;
-    display: flex;
-    flex-direction: column;
+}
+
+.rooms {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.messages {
+  flex-basis: 70%;
+  display: flex;
+  flex-direction: column;
+}
+
+.toggle {
+  flex-basis: 10%;
+  .rooms-list {
+    flex-basis: 100%;
   }
-  .messages {
-    flex-basis: 70%;
-    display: flex;
-    flex-direction: column;
+  ul,
+  .new-room-form {
+    display: none;
   }
+}
+
+.toggle-messages {
+  flex-basis: 90%;
 }
 
 @media screen and (max-width: 768px) {
   .app {
     flex-direction: column;
   }
-  
+
   .messages {
-
-    &.toggle-messages {
-      flex-basis: 90%;
-    }
-  }
-
-  .rooms {
-    flex-basis: 10%;
-    // max-height: 200px;
-
-    &.toggle {
-      flex-basis: auto;
-
-      ul,
-      .new-room-form {
-        display: none;
-      }
-    }
+    overflow-y: auto;
   }
 }
