--- a/src/components/messageList/style.scss
+++ b/src/components/messageList/style.scss
@@ -6,7 +6,6 @@
   padding: 0 20px;
   overflow-y: auto;
   overflow-x: hidden;
-  position: relative;
   h3 {
     color: #24a549;
     font-size: 20px;
@@ -18,12 +17,10 @@
   &::-webkit-scrollbar {
     width: 1em;
   }
-   
   &::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-top-right-radius: 10px;
   }
-   
   &::-webkit-scrollbar-thumb {
     background-color: #4ccc70;
     border-top-right-radius: 10px;
@@ -32,11 +29,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  .message-list {  
+  .message-list { 
+    border-top-right-radius: 0;
     &::-webkit-scrollbar-track {
       border-top-right-radius: 0;
     }
-     
     &::-webkit-scrollbar-thumb {
       border-top-right-radius: 0;
     }
