--- a/src/components/roomList/style.scss
+++ b/src/components/roomList/style.scss
@@ -11,9 +11,6 @@
     text-align: center;
     background-color: #4ccc70;
   }
-  .list-button {
-    display: none;
-  }
   ul {
     list-style-type: none;
     padding: 0;
@@ -33,6 +30,10 @@
   }
 }
 
+.list-button {
+  display: none;
+}
+
 .active {
   color: #fff;
   font-weight: bold;
@@ -41,17 +42,22 @@
 
 @media screen and (max-width: 768px) {
   .rooms-list {
+    border-top-right-radius: 10px;
+    flex-basis: 70%;
     h3 {
       top: 0;
       margin: 0;
       padding-top: 20px;
-      padding-bottom: 15px;
       position: sticky;
     }
-    .list-button {
-      display: block;
-      position: absolute;
-      top: 22px; right: 15px;
+    ul {
+      height: 0;
     }
+  }
+
+  .list-button {
+    display: block;
+    position: absolute;
+    top: 22px; right: 15px;
   }
 }
