--- a/src/components/sendMessageForm/style.scss
+++ b/src/components/sendMessageForm/style.scss
@@ -1,17 +1,23 @@
 .send-message-form {
+  flex-basis: 11%;
   background-color: #eff1f5;
   border-bottom-right-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 60px;
-  height: 10%;
   input {
-    height: 50%;
-    width: 80%;
     border: 2px solid #4ccc70;
     border-radius: 4px;
+    font-size: 16px;
+    height: 40%;
     padding: 0 5px;
     outline: none;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .send-message-form {
+    border-bottom-left-radius: 10px;
   }
 }
